Fix for collapser not appearing.

--- a/tp3/styles.css
+++ b/tp3/styles.css
@@ -56,7 +56,6 @@
 .ui-state-hover {
     background:#ffffe7;
 }
-.tau-pane-collapser,
 .tau-pane-collapser *,
 .tau-btn-add-bg,
 .tau-btn-add-bg *,
